# MIT-6.824

MapReduce/: CMakeLists.txt  MapReduce_master.cpp  MapReduce_worker.cpp  README.md
MapReduce/rpc/: MapReduce.proto
MapReduce/util/: CMakeLists.txt  mapReduceFun.cpp
